[gd_scene load_steps=7 format=3 uid="uid://b4c441cjyvg7n"]

[ext_resource type="Script" path="res://scenes/deathscreen/death_screen.gd" id="1_3xtgp"]
[ext_resource type="PackedScene" uid="uid://c6omje6eu138a" path="res://utility/transition/scene_trasition.tscn" id="2_u4vgl"]

[sub_resource type="CanvasTexture" id="CanvasTexture_1npxa"]

[sub_resource type="Animation" id="Animation_kgfi8"]
resource_name = "new_animation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TouchScreenButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/TouchScreenButton2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_dw6j3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TouchScreenButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/TouchScreenButton2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m6ciq"]
_data = {
"RESET": SubResource("Animation_dw6j3"),
"new_animation": SubResource("Animation_kgfi8")
}

[node name="DeathScreen" type="Node2D"]
script = ExtResource("1_3xtgp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 293.0
offset_bottom = 137.0
color = Color(0.0196078, 0.0196078, 0.0196078, 1)

[node name="Label" type="Label" parent="."]
offset_left = 49.0
offset_top = 18.0
offset_right = 258.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 10
text = "Ви програли...
Але не здавайтесь! Спробуйте знову"
visible_characters = 0
visible_ratio = 0.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 96.0
offset_top = 78.0
offset_right = 196.0
offset_bottom = 118.0

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control"]
position = Vector2(6, 5)
scale = Vector2(89, 20)
texture_normal = SubResource("CanvasTexture_1npxa")

[node name="TouchScreenButton2" type="TouchScreenButton" parent="Control"]
visible = false
position = Vector2(6, 29)
scale = Vector2(89, 20)
texture_normal = SubResource("CanvasTexture_1npxa")

[node name="Label2" type="Label" parent="."]
offset_left = 104.0
offset_top = 85.0
offset_right = 196.0
offset_bottom = 116.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 9
text = "Спробувати знову"

[node name="Label3" type="Label" parent="."]
offset_left = 129.0
offset_top = 109.0
offset_right = 169.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 9
text = "Вийти"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m6ciq")
}
autoplay = "new_animation"

[node name="SceneTrasition" parent="." instance=ExtResource("2_u4vgl")]

[connection signal="pressed" from="Control/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="pressed" from="Control/TouchScreenButton2" to="." method="_on_touch_screen_button_2_pressed"]
[connection signal="transitioned" from="SceneTrasition" to="." method="_on_scene_trasition_transitioned"]
